Issues With Redirection
Attempted to redirect to "c0mpromising.html" when that doesnt exist, changed to Azure.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 
                 
                 <div class="mbr-section-btn"><a class="btn btn-md btn-black-outline display-7" href="Doxbin.html"><span class="mbri-code mbr-iconfont mbr-iconfont-btn"></span>Doxes</a>
-                    <a class="btn btn-md btn-warning-outline display-7" href="https://discord.gg/yJ4Cbw3" target="_blank"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a>   <a class="btn btn-md btn-black-outline display-7" href="null.html" target="_blank"><span class="mbri-globe mbr-iconfont mbr-iconfont-btn"></span>Booter</a> <a class="btn btn-md btn-warning-outline display-7" href="takenxanz.html">@Takenxanz</a> <a class="btn btn-md btn-warning-outline display-7" href="c0mpromising.html">@memedbyazure</a></div>
+                    <a class="btn btn-md btn-warning-outline display-7" href="https://discord.gg/yJ4Cbw3" target="_blank"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Discord</a>   <a class="btn btn-md btn-warning-outline display-7" href="takenxanz.html">@Takenxanz</a> <a class="btn btn-md btn-warning-outline display-7" href="Azure.html">@memedbyazure</a></div>
             </div>
         </div>
     </div>
